fixing unclickable restart btn on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    z-index: 1000;
 }
 
 /* ----------------------------------- */
